// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code beautifier beautifies code 1`] = `
Object {
  "code": 0,
  "stderr": "Fetching source code...
Beautifying source code...
",
  "stdout": "(function() {
    const o = document.title;
    console.log(\`\\\\t\`, o);
                      ^
    window.杨 = o;
})();
",
}
`;

exports[`code beautifier fail if the code has a syntax error 1`] = `
Object {
  "code": 1,
  "stderr": "Fetching source code...
Beautifying source code...
Failed to parse response: SyntaxError: Unexpected token: operator (<)
",
  "stdout": "",
}
`;

exports[`context options 1`] = `
Object {
  "code": 0,
  "stderr": "Fetching source code...
Beautifying source code...
",
  "stdout": "    const o = document.title;
    console.log(\`\\\\t\`, o);
                      ^
    window.杨 = o;
",
}
`;

exports[`context options 2`] = `
Object {
  "code": 0,
  "stderr": "Fetching source code...
Beautifying source code...
",
  "stdout": "    console.log(\`\\\\t\`, o);
                      ^
",
}
`;

exports[`context options 3`] = `
Object {
  "code": 0,
  "stderr": "Fetching source code...
Beautifying source code...
",
  "stdout": "(function() {
    const o = document.title;
    console.log(\`\\\\t\`, o);
                      ^
",
}
`;

exports[`context options 4`] = `
Object {
  "code": 0,
  "stderr": "Fetching source code...
Beautifying source code...
",
  "stdout": "    console.log(\`\\\\t\`, o);
                      ^
    window.杨 = o;
})();
",
}
`;

exports[`fails if no argument is given 1`] = `
Object {
  "code": 1,
  "stderr": "error: missing required argument 'URL:LINE:COLUMN'
",
  "stdout": "",
}
`;

exports[`source map retrieval fallback to beautify if the source map is not found 1`] = `
Object {
  "code": 0,
  "stderr": "Fetching source code...
Fetching source maps...
Failed to fetch source map: Error: Failed to fetch: Not found
Beautifying source code...
",
  "stdout": "(function() {
    const o = document.title;
    console.log(\`\\\\t\`, o);
    window.杨 = o;
                ^
})();
",
}
`;

exports[`source map retrieval no source map option 1`] = `
Object {
  "code": 0,
  "stderr": "Fetching source code...
Beautifying source code...
",
  "stdout": "(function() {
    const o = document.title;
    console.log(\`\\\\t\`, o);
    window.杨 = o;
                ^
})();
",
}
`;

exports[`source map retrieval use the source map from a SourceMap header 1`] = `
Object {
  "code": 0,
  "stderr": "Fetching source code...
Fetching source maps...
",
  "stdout": "File: index.js
const title = document.title
console.log(\`	\`, title)
window.杨 = title
            ^

",
}
`;

exports[`source map retrieval use the source map from a X-SourceMap header 1`] = `
Object {
  "code": 0,
  "stderr": "Fetching source code...
Fetching source maps...
",
  "stdout": "File: index.js
const title = document.title
console.log(\`	\`, title)
window.杨 = title
            ^

",
}
`;

exports[`source map retrieval use the source map from a data-uri 1`] = `
Object {
  "code": 0,
  "stderr": "Fetching source code...
",
  "stdout": "File: index.js
const title = document.title
console.log(\`	\`, title)
window.杨 = title
            ^

",
}
`;

exports[`source map retrieval use the source map from a sourcemap comment 1`] = `
Object {
  "code": 0,
  "stderr": "Fetching source code...
Fetching source maps...
",
  "stdout": "File: index.js
const title = document.title
console.log(\`	\`, title)
window.杨 = title
            ^

",
}
`;
